src/test/ui/parser/bad-value-ident-true.rs
// compile-flags: -Z parse-only

fn true() { } //~ ERROR expected identifier, found keyword `true`
fn main() { }
